--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
   <div class="card">
-    <img src="https://via.placeholder.com/800x400/111111/ffffff?text=TWITTER" alt="Twitter">
+    <img src="https://i.postimg.cc/bwb8jJLQ/438-FE2-D2-BDC9-490-D-969-A-BD9-A9-F5296-ED.jpg" alt="Twitter">
     <div class="card-text">
     
       <h2>TWITTER</h2>
