--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
   </div>
 
   <div class="card">
-    <img src="https://via.placeholder.com/800x400/222222/ffffff?text=FACEBOOK" alt="Facebook">
+    <img src="https://i.postimg.cc/66mN2Rmr/IMG-0863.png" alt="Facebook">
     <div class="card-text">
 
       <h2>FACEBOOK</h2>
-      <a href="https://www.facebook.com/share/1BpY1LAYTz/?mibextid=wwXIfr" target="_blank">
+      <a href="httpsr://www.facebook.com/share/1BpY1LAYTz/?mibextid=wwXIfr" target="_blank">
         <button>CLICK NOW</button>
       </a>
     </div>
   </div>
 
   <div class="card">
-    <img src="https://via.placeholder.com/800x400/333333/ffffff?text=INSTAGRAM" alt="Instagram">
+    <img src="https://i.postimg.cc/ZqcGTyNy/IMG-0240.jpg" alt="Instagram">
     <div class="card-text">
 
       <h2>INSTAGRAM</h2>
@@ -110,7 +110,7 @@
   </div>
 
   <div class="card">
-    <img src="https://via.placeholder.com/800x400/444444/ffffff?text=LINKEDIN" alt="LinkedIn">
+    <img src="https://i.postimg.cc/ZqcGTyNy/IMG-0240.jpg" alt="LinkedIn">
     <div class="card-text">
 
       <h2>LINKEDIN</h2>
@@ -121,7 +121,7 @@
   </div>
 
   <div class="card">
-    <img src="https://via.placeholder.com/800x400/555555/ffffff?text=SNAPCHAT" alt="Snapchat">
+    <img src="https://i.postimg.cc/kMZkXC2w/IMG-0592.jpg" alt="Snapchat">
     <div class="card-text">
 
       <h2>SNAPCHAT</h2>
@@ -133,7 +133,7 @@
 
  
   <div class="card">
-    <img src="https://via.placeholder.com/800x400/666666/ffffff?text=THREADS" alt="Threads">
+    <img src="https://i.postimg.cc/k5gmRcqy/IMG-9955.jpg" alt="Threads">
     <div class="card-text">
      
       <h2>THREADS</h2>
@@ -144,7 +144,7 @@
   </div>
 
 <div class="card">
-  <img src="https://via.placeholder.com/800x400/777777/ffffff?text=WHATSAPP" alt="WhatsApp">
+  <img src="https://i.postimg.cc/BZKGFt9R/IMG-1054.jpg" alt="WhatsApp">
   <div class="card-text">
 
     <h2>WHATSAPP</h2>
@@ -155,7 +155,7 @@
 </div>
 
 <div class="card">
-  <img src="https://via.placeholder.com/800x400/888888/ffffff?text=EMAIL" alt="Email">
+  <img src="https://i.postimg.cc/bwb8jJLQ/438-FE2-D2-BDC9-490-D-969-A-BD9-A9-F5296-ED.jpg" alt="Email">
   <div class="card-text">
    
     <h2>EMAIL</h2>
@@ -167,7 +167,7 @@
 
   
   <div class="about-me">
-    <h2>من أنا؟</h2>
+    <h2>about Me</h2>
     <p>
      I’m Omar Hadraa, a Software Engineering graduate from the University of Science and Technology. I’m passionate about technology and continuously working on improving my skills in programming, web development, and digital innovation.
 
